--- a/project.json
+++ b/project.json
@@ -1,7 +1,7 @@
 {
   "name": "CIISA-Bot",
   "description": "CIISA  bot es un proceso de tarjetas",
-  "main": "Main.xaml",
+  "main": "Procesos\\Main.xaml",
   "dependencies": {
     "UiPath.Database.Activities": "[1.3.7369.25200]",
     "UiPath.Excel.Activities": "[2.8.5]",
